--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,9 @@
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  //background-color: black;
+  ::-webkit-scrollbar {
+    width: 0px;
+  }
 }
 body {
   background-color: black;
