--- a/src/Style/components/about.scss
+++ b/src/Style/components/about.scss
@@ -53,7 +53,8 @@
     cursor: pointer;
   }
   .cv:hover {
-    background-color: #ff4901c7;
+    background-color: #ff4901c7 !important;
+    transition: 0.2s ease-in-out;
     cursor: pointer;
   }
 }
