--- a/src/Style/components/footer.scss
+++ b/src/Style/components/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   color: rgba(255, 255, 255, 0.5);
   text-align: center;
-  padding: 30px;
+  padding: 30px 80px;
   .design {
     padding: 5px;
     .footer-name {
