--- a/src/Style/components/header.scss
+++ b/src/Style/components/header.scss
@@ -6,14 +6,14 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: -webkit-sticky;
   position: fixed;
-  color: #fff;
+  color: #fff !important;
   background-color: #000;
-  padding: 15px 80px;
+  padding: 20px 80px;
   font-size: 16px;
   font-weight: 500;
   width: 100%;
+  z-index: 1000;
 
   &-logo {
     width: 50%;
