--- a/src/Style/components/resume.scss
+++ b/src/Style/components/resume.scss
@@ -1,5 +1,4 @@
 .resume {
-  height: auto;
   padding: 0px 80px;
   color: white;
   background-color: black;
@@ -8,6 +7,8 @@
     margin-top: 30px;
     border-radius: 5px;
     padding: 30px 30px;
+    border: none;
+
     .title {
       &-1 {
         color: #ff4901;
@@ -18,6 +19,7 @@
         font-size: 24px;
         font-weight: 400;
         line-height: 1.5;
+        color: #fff;
       }
       &-3 {
         font-size: 14px;
@@ -28,6 +30,7 @@
     .content {
       margin-top: 30px;
       padding-left: 14px;
+
       &-1 {
         list-style: initial;
         color: #999;
