--- a/src/Style/components/section-1.scss
+++ b/src/Style/components/section-1.scss
@@ -2,9 +2,10 @@
   width: 100%;
   height: 85vh;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   background-color: #000000;
+  padding: 0px 80px;
   &-left {
     display: flex;
     flex-direction: column;
@@ -61,10 +62,11 @@
     height: 125vh;
     display: flex;
     flex-direction: column-reverse;
-    //  justify-content: center;
+    //justify-content: flex-start;
+    justify-content: center;
     background-color: #000000;
     &-left {
-      margin-top: -140px;
+      //  margin-top: -140px;
     }
   }
   .res {
