pdf download link added

--- a/src/Style/components/about.scss
+++ b/src/Style/components/about.scss
@@ -50,6 +50,7 @@
     border-radius: 20px;
     font-weight: bold;
     background-color: #ff4901;
+    color: #fff;
     cursor: pointer;
   }
   .cv:hover {
