--- a/src/Style/components/header.scss
+++ b/src/Style/components/header.scss
@@ -57,13 +57,6 @@ li {
     color: #ff4901;
   }
   .active::after {
-    //display: block;
-    //  content: '';
-    border-bottom: solid 2px #ff4901;
-    transform: scaleX(0);
-    transition: transform 0.4s ease-in-out;
-  }
-  .active::after {
     transform: scaleX(1);
   }
 }
@@ -100,8 +93,22 @@ li {
       left: 0;
       color: #fff;
     }
+    .navbar-link {
+      position: relative;
+    }
     .navbar-link::after {
-      width: 8%;
+      position: absolute;
+      background: #ff4901;
+      transform: scaleX(0);
+      transition: 0.3s ease-in-out;
+      width: 100%;
+      height: 0.5px;
+      left: 0;
+      bottom: 0px;
+      top: 20px;
+    }
+    .active::after {
+      transform: scaleX(1);
     }
   }
 }
