--- a/src/Style/components/about.scss
+++ b/src/Style/components/about.scss
@@ -10,7 +10,7 @@
   text-align: center;
   font-size: 50px;
   font-weight: 800;
-  padding-bottom: 80px;
+  padding: 80px 0px;
   background-color: black;
   color: white;
 }
@@ -72,6 +72,6 @@
     column-gap: 50px;
   }
   .about-heading1 {
-    margin-top: -60px;
+    // margin-top: -60px;
   }
 }
