--- a/src/Style/components/section-1.scss
+++ b/src/Style/components/section-1.scss
@@ -1,11 +1,11 @@
 .section-1 {
   width: 100%;
-  height: 85vh;
+  height: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #000000;
-  padding: 0px 80px;
+  padding: 80px 80px 0px 80px;
   &-left {
     display: flex;
     flex-direction: column;
@@ -59,12 +59,12 @@
 }
 @media (max-width: 990px) {
   .section-1 {
-    height: 125vh;
     display: flex;
     flex-direction: column-reverse;
     //justify-content: flex-start;
     justify-content: center;
     background-color: #000000;
+   // padding: 160px 80px;
     &-left {
       //  margin-top: -140px;
     }
